<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="eliminar">Eliminar</string>
    <string name="app_id">300785456764524</string>
    <string name="ver">Ver</string>
    <string name="app_name">Fit Form</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bienvenido">Bienvenido a Fit Form</string>
    <string name="run">Run</string>
    <string name="acercade">Acerca de...</string>
    <string name="cancelar">Cancelar</string>
    <string name="rest">Rest</string>
    <string name="comenzarActividad">Comenzar actividad</string>
    <string name="preferencias">Preferencias</string>
    <string name="configuracion">Configuracion</string>
    <string name="desplegarmenu">Desplegar</string>
    <string name="acerda_de_mensaje">Fit Form ver 1.0\n(c)All rights reserved\n\nAuthor: Marco Gracia Jerez</string>
    <string name="acerda_de_titulo">About</string>
    <string name="title_activity_main_activity_tabs">Fit Form</string>
    <string name="titulo_tab_alimentos">Alimentacion</string>
    <string name="titulo_tab_actividad">Actividad</string>
    <string name="titulo_tab_lista_actividades">Mis actividades</string>
    <string name="titulo_tab_resumen">Resumen</string>
    <string name="title_activity_configuracion_cuenta">ConfiguracionCuenta</string>
    <string name="balanceimc">Balance IMC</string>
    <string name="nombre">Nombre</string>
    <string name="nombrecompleto">Nombre completo</string>
    <string name="fechadenacimiento">Fecha de nacimiento</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="sexo">Sexo</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="objetivo">Objetivo:</string>
    <string name="perdidapeso">Perdida de peso</string>
    <string name="mantenimiento">Manetenimiento</string>
    <string name="gananciapeso">Ganancia de peso</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="iniciaractividad">Iniciar Actividad</string>
    <string name="gps">GPS</string>
    <string name="parar">Parar</string>
    <string name="title_activity_ver_actividad">VerActividad</string>
    <string name="avisodesaudio">Avisos de audio</string>
    <string name="unidadesdedistancia">Unidades de distancia</string>
    <string name="saltarinicio">Saltar pantalla de inicio</string>
    <string name="title_activity_activity_lista_alimentos">ActivityListaAlimentos</string>
    <string name="cantidad_alimentos">¿Desea añadir este alimento?</string>
    <string name="title_activity_activity_anadir_alimento">ActivityAnadirAlimento</string>
    <string name="etCantidadAlimentos">Cantidad</string>
    <string name="tvCantidadAlimentos">Info</string>
    <string name="title_activity_tab_resumen_diario">TabResumenDiario</string>
    <string name="tvTotalActividades">Total actividades</string>
    <string name="tvTotalIngestaAlimentos">Total ingesta alimentos</string>
    <string name="tvCaloriasQuemaNatural">Total quema natural</string>
    <string name="tvCaloriasTotalDiario">Total:</string>
    <string name="titulo_tab_resumen_diario">Resumen diario</string>
    <string name="titulo_tab_rutina">Introducir rutina</string>
    <string name="empty">----</string>
    <string name="btPausarMusica">Pausar</string>
    <string name="btMusicStartActivity">Musica</string>
    <string name="btClimaIniciarActividad">Clima</string>
    <string name="title_activity_activity_mostrar_clima">ActivityMostrarClima</string>
    <string name="title_activity_fragment_introducir_rutina">FragmentIntroducirRutina</string>
    <string name="tvNombreRutina">NOMBRE DE LA RUTINA</string>
    <string name="etNombreRutina">Introduzca un nombre</string>
    <string name="tvDetallesRutina">DETALLES DE LA RUTINA</string>
    <string name="tvDuracionRutina">Duracion rutina</string>
    <string name="btDuracionFase1">Duracion Fase 1</string>
    <string name="unMinuto">1 : 00</string>
    <string name="btDuracionfase2">Duracion Fase 2</string>
    <string name="btDuracionFase3">Duracion Fase 3</string>
    <string name="btGuardarRutina">Guardar rutina</string>
    <string name="numeroderepeticiones">Numero de repeticiones</string>
    <string name="horas">horas</string>
    <string name="minutos">minutos</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_dialog_fragment_duracion_horas">DialogFragmentDuracionHorasActivity</string>
    <string name="tvRutina">Rutina:</string>
    <string name="tvFase1Mapa">Fase 1:</string>
    <string name="sintiempo">--.--</string>
    <string name="separador">/</string>
    <string name="tvfase2Mapa">Fase 2:</string>
    <string name="tvFase3Mapa">Fase 3:</string>
    <string name="tvTiempoTotal">Tiempo total</string>

</resources>
