<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityAnadirAlimento" >

    <EditText
        android:id="@+id/EditTextCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/cantidad_alimentos"
        android:inputType="numberDecimal"
        android:text="@string/etCantidadAlimentos" />

    <TextView
        android:id="@+id/tvCantidadAlimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextCantidad"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/EditTextCantidad"
        android:layout_marginTop="18dp"
        android:text="@string/tvCantidadAlimentos"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnAceptarCantidadAlimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextCantidad"
        android:layout_below="@+id/EditTextCantidad"
        android:layout_marginTop="90dp"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/btCancelarCantidadAlimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAceptarCantidadAlimento"
        android:layout_alignBottom="@+id/btnAceptarCantidadAlimento"
        android:layout_alignRight="@+id/EditTextCantidad"
        android:text="@string/cancelar" />

</RelativeLayout>
