<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btRun"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBienvenido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/run"
        android:textColor="@color/Orange" />

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:text="@string/bienvenido"
        android:textColor="@color/RoyalBlue"
        android:textSize="27sp" />

    <Button
        android:id="@+id/btRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btRun"
        android:layout_below="@+id/btAcercade"
        android:layout_marginTop="24dp"
        android:text="@string/rest"
        android:textColor="@color/Orange" />

    <Button
        android:id="@+id/btAcercade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRun"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/acercade"
        android:textColor="@color/DarkOrange" />

</RelativeLayout>
