<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<LinearLayout
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.mgj.formfit.FragmentIntroducirRutina$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvTipoActividadMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreRutina" />

    <EditText
        android:id="@+id/etNombreRutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/etNombreRutina" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTiempoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvDetallesRutina" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1.38"
        android:background="@color/WhiteSmoke"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.00"
            android:background="@color/DarkGray"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.00"
                android:background="@color/DarkGray"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btDuracionRutina1"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="0.00"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/btDuracionFase1" />

                <TextView
                    android:id="@+id/tvFase1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_weight="0.00"
                    android:text="@string/unMinuto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="0.00"
                android:background="@color/Gainsboro"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btDuracionFase2"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="0.00"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/btDuracionfase2"
                    android:textColorHint="@color/LightGrey" />

                <TextView
                    android:id="@+id/tvFase2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_weight="0.00"
                    android:text="@string/unMinuto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btDuracionFase3"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_weight="0.00"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/btDuracionFase3" />

                <TextView
                    android:id="@+id/tvFase3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_weight="0.00"
                    android:text="@string/unMinuto" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="15.40"
            android:background="@color/Gainsboro"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="85dp"
                android:text="@string/numeroderepeticiones" />

            <NumberPicker
                android:id="@+id/numberPicker1"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btGuardarRutina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/LimeGreen"
            android:text="@string/btGuardarRutina"
            android:textColor="@color/WhiteSmoke" />

        <Button
            android:id="@+id/btCancelarGuardarRutina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/DimGray"
            android:text="@string/cancelar"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>

</ScrollView>