<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TabResumenDiario" >

    <TextView
        android:id="@+id/tvTotalEjercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/tvTotalActividades"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvTotalAlimentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCaloriasTotalActividades"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvCaloriasTotalActividades"
        android:layout_marginTop="38dp"
        android:text="@string/tvTotalIngestaAlimentos"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvCaloriasTotalActividades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotalEjercicio"
        android:layout_below="@+id/tvTotalEjercicio"
        android:layout_marginTop="20dp"
        android:text="@string/empty"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvCaloriasTotalIngestaAlimentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotalAlimentos"
        android:layout_below="@+id/tvTotalAlimentos"
        android:layout_marginTop="20dp"
        android:text="@string/empty"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvTotalQuemaNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCaloriasTotalIngestaAlimentos"
        android:layout_below="@+id/tvCaloriasTotalIngestaAlimentos"
        android:layout_marginTop="46dp"
        android:text="@string/tvCaloriasQuemaNatural"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvCaloriasQuemaNatural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotalQuemaNatural"
        android:layout_below="@+id/tvTotalQuemaNatural"
        android:layout_marginTop="20dp"
        android:text="@string/empty"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvCaloriasTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotalCalorias"
        android:layout_alignBottom="@+id/tvTotalCalorias"
        android:layout_alignRight="@+id/tvTotalAlimentos"
        android:layout_toRightOf="@+id/tvTotalCalorias"
        android:text="@string/empty"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvTotalCalorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCaloriasQuemaNatural"
        android:layout_below="@+id/tvCaloriasQuemaNatural"
        android:layout_marginTop="36dp"
        android:text="@string/tvCaloriasTotalDiario"
        android:textSize="20sp" />

</RelativeLayout>
