<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etHoras"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etMinutos"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvTipoActividadMapa"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/minutos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btAceptarTiempofase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:background="@color/white"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/btCancelarTiempoFase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.37"
            android:background="@color/white"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>