<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    class="com.google.android.gms.maps.SupportMapFragment"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivMapaActividad"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.50"
        android:scaleType="centerCrop"
        android:src="@drawable/mind" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btClima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/Azure"
            android:text="@string/btClimaIniciarActividad" />

        <Button
            android:id="@+id/btIniciarActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:background="@color/CornflowerBlue"
            android:paddingLeft="5dp"
            android:text="@string/iniciaractividad"
            android:textColor="@color/Beige"
            android:textColorLink="@color/Beige" />

        <Spinner
            android:id="@+id/spTipoActividad"
            android:layout_width="fill_parent"
			android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/Azure"
            android:entries="@array/tipoactividad" />

        <Spinner
            android:id="@+id/spRutinas"
            android:layout_width="fill_parent"
			android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/Azure"
            android:layout_below="@+id/spTipoActividad" />

        <Button
            android:id="@+id/btgps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btIniciarMusica"
            android:layout_centerHorizontal="true"
            android:background="@color/Azure"
            android:text="@string/gps" />

        <Button
            android:id="@+id/btIniciarMusica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/Azure"
            android:text="@string/btMusicStartActivity" />

    </RelativeLayout>

</FrameLayout>